<resources>
    <string name="app_name">UTS-IF5-10119170-Elbaruna Wifaldzan</string>
    <string name="tentang">TENTANG</string>
    <string name="halo1">Hallo, perkenalkan saya elbaruna</string>
    <string name="halo2">mahasiswa unikom</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">LANJUTKAN</string>
    <string name="halo3">Aplikasi ini berisikan tentang data diri</string>
    <string name="halo4">seperti hobi,foto pribadi, dan cita-cita</string>
    <string name="halo5"><![CDATA[terdapat Gallery, music favorite & video]]></string>
    <string name="halo6">yang saya suka</string>
    <string name="Hai_saya_Elbaruna_Wifaldzan">Hai, saya Elbaruna Wifaldzan</string>
    <string name="kata1">saya seorang mahasiswa di universitas</string>
    <string name="kata2">komputer indonesia, sekarang umur</string>
    <string name="kata3">saya 20 tahun, saya sangat tertarik pada</string>
    <string name="kata4">dunia teknologi khususnya</string>
    <string name="kata5">programming</string>
    <string name="hobi">Hobi</string>
    <string name="sepak_bola">Bola</string>
    <string name="boxing">Boxing</string>
    <string name="gym">GYM</string>
    <string name="cita">Cita-cita</string>
    <string name="web">Full-stack web developer</string>
    <string name="startup">Membangun startup</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="daily">Daily</string>
    <string name="profile">Profile</string>
    <string name="music">Music</string>
    <string name="video">Video</string>
    <string name="gallery">Gallery</string>
    <string name="Daily_Acitivty">Daily Acitivty</string>
    <string name="Friends_List">Friends List</string>
    <string name="riki">Rhiki Wahyudin</string>
    <string name="faisal">Dede Faisal</string>
    <string name="indri">Indriyanti</string>
    <string name="nursyifa">Nursyifa</string>
    <string name="ghani">Ghani Rizal</string>
    <string name="ana">Ana</string>
    <string name="flm1">Spider-Man:NWH</string>
    <string name="flm2">Doctor Strange:TMOM</string>
    <string name="flm3">The Batman</string>
    <string name="flm4">Moon knight</string>
    <string name="Contact">Contact</string>
    <string name="CallPhone">Call Phone</string>
    <string name="SendMail">Send Mail</string>
    <string name="FindMe">Find Me</string>
    <string name="MapMarker">Map and marker</string>
    <string name="About">About</string>
    <string name="costum">Costum Dialog</string>
    <string name="waktu">waktu</string>
    <string name="nama_teman">nama_teman</string>
    <string name="music_favorite">Music Favorite</string>
    <string name="judul_music">Judul Music</string>
    <string name="cover">Cover</string>
    <string name="instragram">Instagram</string>
    <string name="daftar_teman">Klik Untuk Melihat Daftar Teman</string>

</resources>